--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -10,7 +10,7 @@
 	<script id="logTemplate" type="text/x-jquery-tmpl"> 
 		{{each Logs}}
 			<span>
-				<a href='#${$value.timestamp}' name='${$value.timestamp}'>${$value.date}</a>:${$value.msg}
+				<a href='#${$value.timestamp}' name='${$value.timestamp}'>${$value.date}</a>:&nbsp;&nbsp;${$value.msg}
 			</span>
 			<br/>
 		{{/each}}
