--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title><%= title %></title>
+	<link rel="stylesheet" type="text/css" href="http://assets3.pastie.org/stylesheets/twilight.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
 	<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 	<script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
