search from channel. searches are gets

--- a/web/views/search.ejs
+++ b/web/views/search.ejs
@@ -4,10 +4,9 @@
 	<title><%= title %></title>
 </head>
 <body>
-	<form name="input" action="/search" method="post" >
-		Search Terms: <input type="text" name="search" />
+	<form name="input" action="/search" method="get" >
+		Search Terms: <input type="text" name="search" value="<%=search%>"/>
 		<input type="submit" value="Submit" />
-		<span><%= search %></span>
 	</form>
 	<div>
 		<ul>
