more minor bug fixen

--- a/web/views/search.ejs
+++ b/web/views/search.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<form name="input" action="/search" method="get" >
-		Search Terms: <input type="text" name="search" value="<%=search%>"/>
+		Search Terms: <input type="text" name="q" value="<%=search%>"/>
 		<input type="submit" value="Submit" />
 	</form>
 	<div>
