--- a/web/views/search.ejs
+++ b/web/views/search.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 	<title><%= title %></title>
 </head>
 <body>
