--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -8,3 +8,14 @@ body {
 a {
   color: #00B7FF;
 }
+
+h3 {
+    text-align: center;
+}
+
+video {
+	-webkit-transition-property: opacity;
+	-webkit-transition-duration: 2;
+	height: 100%;
+	width: 100%;
+}
