--- a/web/views/video.ejs
+++ b/web/views/video.ejs
@@ -1,27 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>video chat</title>
-<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="javascripts/video.js"></script>	
-<style>
-video {
-	opacity: 0;
-	-webkit-transition-property: opacity;
-	-webkit-transition-duration: 2;
-}
-</style>
+  <head>
+    <meta charset="utf-8">
+    <title>Misaka Video Chat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Misaka Video Chat">
+    <meta name="author" content="Vishnu Iyengar">
 
-</head>
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+    </style>
+    <link href="stylesheets/bootstrap-responsive.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le fav and touch icons -->
+  </head>
+
+  <body>
 	
-<body>
-  <div id="container">
-	  <div id="local">
-		<span>you</span>
-	    <video id="localVideo" autoplay="autoplay">
-	    </video>
-  </div>
-</body>
+	 <div class="navbar navbar-fixed-top">
+	      <div class="navbar-inner">
+	        <div class="container-fluid">
+	          <h3 class="brand">Hello <%= nick %></h3>
+	          <a class="btn pull-right" id="drop_video">
+	              <i class="icon-facetime-video"></i> Drop Video
+	          </a>
+	        </div>
+	      </div>
+	    </div>
+	
+			<div id="peer_container" class="container-fluid">
+			</div>
+
+			<div class="container-fluid">
+				<div class="row-fluid">
+					<div class="span4"/></div> 
+					<div class="span4">
+						<h3>You</h3>
+						<video id="localVideo" autoplay="autoplay"/>
+					</div>
+					<div class="span4"></div>
+				</div>
+			</div>
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+   <script src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="javascripts/video.js"></script>	
+	<script type="text/javascript" src="javascripts/bootstrap.min.js"></script>	
+	<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+	<script id="VideoTemplate" type="text/x-jquery-tmpl"> 
+		<div id="video_container_${sid}">
+			<h3>${nick}</h3>
+			<video id="video_${sid}" class="testing" autoplay="autoplay" src="${src}"/>
+		</div>
+	</script>	
+  </body>
 </html>
