--- a/web/views/video.ejs
+++ b/web/views/video.ejs
@@ -52,8 +52,10 @@
 						<video id="localVideo" autoplay="autoplay"/>
 					</div>
 					<div class="span8">
-						<div id='chatArea'></div>
-						<input id='chatLine' type='text' placeholder='write your text here...'/>
+						<div class="chatAreaWrapper">
+							<div id='chatArea'></div>
+						</div>
+						<input id='chatLine' type='text' placeholder='write your text here...' disabled="true"/>
 					</div>
 				</div>
 			</div>
