--- a/modules/irc_logs/display_logs.ejs
+++ b/modules/irc_logs/display_logs.ejs
@@ -3,19 +3,19 @@
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title><%= title %></title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
 	<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-	<script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
-	<script type="text/javascript" src="javascripts/logs.js"></script>	
+	<script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+	<script type="text/javascript" src="irc_logs/logs.js"></script>
 	<script type="text/javascript" src="javascripts/underscore.date.min.js"></script>
-	<script id="logTemplate" type="text/x-jquery-tmpl"> 
+	<script id="logTemplate" type="text/x-jquery-tmpl">
 		{{each Logs}}
 			<span>
 				<a href='#${$value.timestamp}' name='${$value.timestamp}'>${$value.date}</a>:&nbsp;&nbsp;${$value.msg}
 			</span>
 			<br/>
 		{{/each}}
-	</script>	
+	</script>
 </head>
 <body id="content">
 </body>
